--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -2,16 +2,16 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-   
+
 }
 
 
 .main-bar {
-    background-color:#fff;
+    background-color: #fff;
     padding: 8px;
 }
 
-.container-fluid {}
+
 
 .search-icon {
     display: inline;
@@ -37,7 +37,10 @@
     margin-left: 10px;
 }
 
-
+.drop-link-one {
+    border: 1px solid black;
+    border-radius: 10px;
+}
 
 .web-title {
     font-size: 2rem;
@@ -45,18 +48,20 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.side-bar{
+.side-bar {
     height: 800px;
     background-color: #EE6C4D;
-   
-   
+
+
 }
-.ul-one,.ul-two {
+
+.ul-one,
+.ul-two {
     list-style: none;
     margin: 0;
     padding: 0;
     text-align: justify;
-   
+
 }
 
 a {
@@ -69,9 +74,9 @@ a {
 }
 
 .main-content {
-/*    width: 80%;*/
+    /*    width: 80%;*/
     height: 800px;
-    background-color:#ECEFF0;
+    background-color: #ECEFF0;
 }
 
 .main {
@@ -81,20 +86,20 @@ a {
 
 
 li:hover {
-    background: rgba(255,255,255,.2);    
+    background: rgba(255, 255, 255, .2);
 }
 
-li{
-   
+li {
+
     position: relative;
 }
 
 .horizontal-rule {
-      height:0;
+    height: 0;
     border-top: 1px solid rgba(0, 0, 0, .1);
     border-bottom: 1px solid rgba(255, 255, 255, .3);
     width: 90%;
-    margin:20px auto;
+    margin: 20px auto;
 }
 
 .side-bar-icon {
@@ -103,21 +108,20 @@ li{
 }
 
 .link-text {
-    
+
     position: absolute;
     left: 60px;
     top: 18px;
 
 }
-@media screen(max-width: 600px) {
-    
-}
+
+
 .main-left {
     height: auto:;
     background-color: #EE6C4D;
     padding-top: .5rem;
     border-radius: 10px;
-    
+
 }
 
 .main-right {
@@ -129,17 +133,25 @@ li{
 
 .watch {
     margin-left: 15px;
- 
+
 }
 
 .gallery-item {
     flex-basis: 22%;
-    height: 350px;
-/*    background-color: #ecb390;*/
+    height: 330px;
+    padding: 0;
+    /*    background-color: #ecb390;*/
     margin-top: 20px;
     border-radius: 10px;
     text-align: center;
-   font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid black;
+}
+.gallery-img img{
+    height: 200px;
+    width: 320px;
+    display: block;
+    margin: 5px 8px 10px 8px;
 }
 
 .latest-gallery {
@@ -147,10 +159,11 @@ li{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content:space-around;
 }
 
 .video-item {
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .title-one {
@@ -160,46 +173,61 @@ li{
     margin-left: 15px;
 }
 
-.gallery-div:hover {
-     background: rgba(0,0,0,.4); 
-    border-radius: 10px;
-    
+.gallery-div a{
+    margin-top: 7px;
 }
 
-.gallery-item:hover{
+.gallery-div a:hover{
+width:100px;
+height: 40px;
+text-align: center;
+line-height: 33px;
+background-color: rgb(17, 137, 241);
+transition:  background-color 500ms linear;
+}
+
+.gallery-div:hover {
+    background: rgba(0, 0, 0, .4);
+    border-radius: 10px;
+}
+
+.gallery-item:hover {
     transform: translateY(-10px);
 }
 
 .watch-two {
     background-color: aqua;
-    
-    
 }
 
 .main-two {
     display: flex;
-    background-color:blueviolet;
+    background-color: blueviolet;
 }
 
 .tutorial-gallery {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 }
 
-.tgallery-item {
+.gallery-item {
     border-radius: 10px;
     flex-basis: 18%;
-    height: 400px;
-/*    background-color: brown;*/
+    height: 350px;
+    /*    background-color: brown;*/
     border-radius: 10px;
     text-align: center;
-   font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 10px;
 }
+.gallery-div{
+    /* height: 137px; */
+    height:135px ;
+}
 
-.tgallery-item:hover{
+
+.tgallery-item:hover {
     transform: translateY(-10px);
 }
 
@@ -209,6 +237,6 @@ li{
 }
 
 .main-video {
-    
-     height: 1200px;
+
+    height: 1200px;
 }
