playlist frontend done

--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -109,6 +109,7 @@
                                 <h4><%= data[i].c_name %> </h4>
                                 <p style="margin:0">Teacher:<%= data[i].t_name %> <br> Domain: <%= data[i].domain %></p>
                                 <a href="/courses/<%= data[i].c_id %> " class="btn btn-secondary btn-sm">Watch</a>
+                                <a href="/courses/<%= data[i].c_id %> " class="btn btn-secondary btn-sm">+ Playlist</a>
                             </div>
                         </div>
                         <% } %>
