--- a/views/test.ejs
+++ b/views/test.ejs
@@ -22,9 +22,11 @@
       <label for="name">Name</label> <input type="text" name="name" placeholder="Enter Name" id="name">
       <input type="submit">
     </form>
-    <button id='haha'>Click me</button>
+    <!-- <button id='haha'>Click me</button> -->
   </div>
 
+
+  <button id='pl'>Add to Playlist</button>
 
 
 <script src="/js/test.js"></script>
